--- a/src/gui/Login.form
+++ b/src/gui/Login.form
@@ -134,6 +134,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="contrasenia">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="contraseniaActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
